[package]
name = "tokio-ping"
version = "0.3.0"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>"]
documentation = "https://docs.rs/tokio-ping"
repository = "https://github.com/knsd/tokio-ping"
description = "Asynchronous ICMP pinging library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.3"
libc = "0.2"
mio = { version = "0.7", features = ["os-ext"] }
rand = "0.8"
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1.5", features = ["rt", "time", "net"] }
parking_lot = "0.11"

[dev-dependencies]
tokio = { version = "1.5", features = ["rt-multi-thread", "time", "macros"] }
