[package]
name = "tokio-icmp-echo"
version = "0.4.3"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>", "Jan Christian Grünhage <jan.christian@gruenhage.xyz"]
documentation = "https://docs.rs/tokio-icmp-echo"
repository = "https://github.com/jcgruenhage/tokio-icmp-echo"
description = "Asynchronous ICMP pinging library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
futures = "0.3"
mio = { version = "1.0", features = ["os-ext"] }
rand = "0.9"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1", features = ["rt", "time", "net"] }
parking_lot = "0.12"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
